tests/ir/validation/expected/type_mismatch.txt
semantic error: несоответствие типов - несоответствие типов в инициализации переменной 'x'
  --> tests/ir/validation/type_mismatch.src:2:13
2      int x = true;
               ^
   = ожидалось: int
   = получено: bool
   = подсказка: приведите значение к ожидаемому типу

